--- a/app/src/main/res/layout/activity_car_manager_fister.xml
+++ b/app/src/main/res/layout/activity_car_manager_fister.xml
@@ -2,13 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:swipe="http://schemas.android.com/apk/res-auto"
+    android:background="#f5f5f5"
     android:orientation="vertical">
 
 
 
     <com.handmark.pulltorefresh.library.PullToRefreshSwipeListView
-
+        xmlns:swipe="http://schemas.android.com/apk/res-auto"
         android:id="@+id/listview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
