--- a/app/src/main/res/layout/activity_my_collections.xml
+++ b/app/src/main/res/layout/activity_my_collections.xml
@@ -1,99 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.handmark.pulltorefresh.library.PullToRefreshSwipeListView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:swipe="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/listview"
     android:layout_width="match_parent"
-    android:background="#F0F0F0"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
-
-    <include layout="@layout/title_all" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@color/white"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:id="@+id/tv_shop"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="商家"
-            
-            android:textColor="@color/status_color"
-            android:textSize="18sp" />
-
-        <View
-            android:layout_width="0.8dp"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="5dp"
-            android:layout_marginTop="5dp"
-            android:background="#D2D2D2" />
-
-        <TextView
-            android:id="@+id/tv_goods"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="商品"
-            android:textSize="18sp" />
-    </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.8dp"
-        android:background="#D2D2D2" />
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="2dp"
-        android:weightSum="2"
-        android:gravity="center_horizontal"
-        android:layout_below="@+id/ll_integral_add_title" >
-
-        <LinearLayout 
-             android:id="@+id/view_left"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:visibility="invisible"
-            android:layout_height="match_parent">
-             <View
-           
-           
-            android:layout_width="match_parent"
-            android:layout_height="fill_parent"
-            
-            android:background="@color/status_color" />
-            </LinearLayout>
-       
-        <LinearLayout 
-             android:id="@+id/view_right"
-             android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:visibility="invisible"
-            android:layout_height="match_parent">
-             <View
-           
-           
-            android:layout_width="match_parent"
-            android:layout_height="fill_parent"
-            android:background="@color/status_color" />
-            </LinearLayout>
-       
-    </LinearLayout>
-    
-    <FrameLayout 
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/my_fragment"
-        
-        ></FrameLayout>
-    
-
-</LinearLayout>
+    android:layout_height="0dp"
+    android:layout_marginTop="10dp"
+    android:layout_weight="1"
+    android:background="#f5f5f5"
+    android:cacheColorHint="#00000000"
+    android:divider="#19000000"
+    android:dividerHeight="1.0px"
+    android:fadingEdge="none"
+    android:fastScrollEnabled="false"
+    android:footerDividersEnabled="false"
+    android:headerDividersEnabled="false"
+    android:listSelector="#00000000"
+    android:smoothScrollbar="false"
+    swipe:swipeBackView="@+id/back"
+    swipe:swipeCloseAllItemsWhenMoveList="true"
+    swipe:swipeFrontView="@+id/front"
+    swipe:swipeMode="left"
+    swipe:swipeOffsetLeft="200dip" />
