--- a/app/src/main/res/layout/activity_my_jifen.xml
+++ b/app/src/main/res/layout/activity_my_jifen.xml
@@ -1,69 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
 
-    android:clipToPadding="true"
-    android:fitsSystemWindows="true"
 
     android:orientation="vertical">
-
-    <LinearLayout
-        android:id="@+id/rl_title_mainActivity"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/bule_title"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:padding="5dp">
-
-        <ImageButton
-            android:id="@+id/imageLeft_titil_all"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:background="@color/transparent"
-            android:padding="10dp"
-            android:src="@drawable/back_arrow" />
-
-        <TextView
-            android:id="@+id/text_titil_all"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center_horizontal"
-            android:singleLine="true"
-            android:text="我的积分"
-            android:textColor="@color/white"
-            android:textSize="20sp" />
-
-
-        <RelativeLayout
-
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="8dp"
-            android:background="@color/transparent">
-
-            <ImageButton
-                android:id="@+id/imageRigth_titil_all"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:background="@color/transparent"
-                android:padding="10dp"
-                android:src="@drawable/classify_01"
-                android:visibility="gone" />
-
-            <TextView
-                android:id="@+id/tv_right_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:textColor="@color/white"
-                android:textSize="20sp" />
-        </RelativeLayout>
-    </LinearLayout>
 
 
     <RelativeLayout
@@ -72,6 +13,7 @@
         android:background="@color/bule_title">
 
         <RelativeLayout
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
@@ -96,7 +38,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_1"
                 android:layout_marginLeft="25dp"
-                android:text="1255"
+                android:text="0"
                 android:textColor="#72A234"
                 android:textSize="26sp" />
 
@@ -115,17 +57,17 @@
 
             <TextView
                 android:layout_width="match_parent"
-                android:gravity="center"
-                android:padding="10dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tv_3"
+                android:layout_marginBottom="10dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                android:layout_height="wrap_content"
-                android:textColor="#fff"
                 android:background="@drawable/bg_my_jifen"
-                android:layout_below="@id/tv_3"
-                android:text="积分兑换商城" />
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="积分兑换商城"
+                android:textColor="#fff" />
 
 
         </RelativeLayout>
@@ -134,19 +76,13 @@
     </RelativeLayout>
 
 
-<TextView
-    android:text="最近30天积分记录"
-    android:padding="10dp"
-    android:background="#F3F1F2"
-    android:textColor="#878586"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content" />
-
-
-    <ListView
-        android:id="@+id/listview"
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"
+        android:background="#F3F1F2"
+        android:padding="10dp"
+        android:text="最近30天积分记录"
+        android:textColor="#878586" />
 
 
 </LinearLayout>
