--- a/app/src/main/res/layout/activity_my_jifen_helen.xml
+++ b/app/src/main/res/layout/activity_my_jifen_helen.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.huiche.lib.lib.custemview.MyRecycleView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/my_recycleview"
+    android:id="@+id/myrecycle_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="match_parent"
+    android:background="#fff" />
 
 
 
