--- a/app/src/main/res/layout/activity_my_partner.xml
+++ b/app/src/main/res/layout/activity_my_partner.xml
@@ -1,66 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:clipToPadding="true"
-    android:fitsSystemWindows="true"
+    android:layout_height="wrap_content"
+
     android:orientation="vertical">
-
-    <LinearLayout
-        android:id="@+id/rl_title_mainActivity"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/bule_title"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:padding="5dp">
-
-        <ImageButton
-            android:id="@+id/imageLeft_titil_all"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:background="@color/transparent"
-            android:padding="10dp"
-            android:src="@drawable/back_arrow" />
-
-        <TextView
-            android:id="@+id/text_titil_all"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center_horizontal"
-            android:singleLine="true"
-            android:text="我的合伙人"
-            android:textColor="@color/white"
-            android:textSize="20sp" />
-
-
-        <RelativeLayout
-
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="8dp"
-            android:background="@color/transparent">
-
-            <ImageButton
-                android:id="@+id/imageRigth_titil_all"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:background="@color/transparent"
-                android:padding="10dp"
-                android:src="@drawable/classify_01" />
-
-            <TextView
-                android:id="@+id/tv_right_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:textColor="@color/white"
-                android:textSize="20sp" />
-        </RelativeLayout>
-    </LinearLayout>
 
 
     <RelativeLayout
@@ -71,33 +14,35 @@
 
 
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="佣金"
                 android:textColor="#fff"
-                android:textSize="18sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:textSize="18sp" />
 
 
             <TextView
+                android:id="@+id/tv_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
                 android:layout_marginLeft="10dp"
                 android:text="888878"
+                android:textColor="#fff"
+                android:textSize="42sp" />
 
-                android:textColor="#fff"
-                android:textSize="42sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
             <TextView
-                android:text="元"
-                android:layout_marginLeft="5dp"
-                android:textColor="#fff"
-                android:textSize="18sp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:text="元"
+                android:textColor="#fff"
+                android:textSize="18sp" />
 
 
         </LinearLayout>
@@ -106,39 +51,31 @@
     </RelativeLayout>
 
     <LinearLayout
-        android:background="#FFFFFF"
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="#FFFFFF"
+        android:orientation="horizontal">
 
         <View
+            android:layout_width="5dp"
+            android:layout_height="20dp"
+            android:layout_marginBottom="5dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:layout_width="5dp"
-            android:background="#EA2111"
-            android:layout_height="20dp"/>
+            android:background="#EA2111" />
 
 
         <TextView
 
-            android:layout_gravity="center_vertical"
-            android:text="合伙商家"
-            android:layout_marginLeft="10dp"
-            android:textColor="#3F3F3F"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="10dp"
+            android:text="合伙商家"
+            android:textColor="#3F3F3F" />
 
 
     </LinearLayout>
-
-
-    <ListView
-        android:id="@+id/listview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
 
 
 </LinearLayout>
