--- a/app/src/main/res/layout/item_my_jifen.xml
+++ b/app/src/main/res/layout/item_my_jifen.xml
@@ -16,6 +16,7 @@
 
 
     <TextView
+        android:id="@+id/tv_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_1"
@@ -26,6 +27,7 @@
 
 
     <TextView
+        android:id="@+id/tv_3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
