--- a/app/src/main/res/layout/item_my_partner.xml
+++ b/app/src/main/res/layout/item_my_partner.xml
@@ -38,24 +38,24 @@
         android:textColor="#909090" />
 
     <ImageView
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="10dp"
         android:id="@+id/iv_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_2"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"
         android:layout_toRightOf="@id/iv_1"
         android:src="@drawable/comments_star_5_0" />
 
     <TextView
+        android:id="@+id/tv_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:text="距300m"
         android:layout_marginRight="10dp"
         android:layout_marginTop="70dp"
         android:drawableLeft="@drawable/address"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
+        android:text="距300m" />
 
 
 </RelativeLayout>
