--- a/app/src/main/res/layout/item_detail_helen.xml
+++ b/app/src/main/res/layout/item_detail_helen.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:background="#fff"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
@@ -14,17 +15,16 @@
         android:textSize="14sp" />
 
     <TextView
+        android:id="@+id/tv_3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_1"
+        android:layout_marginBottom="10dp"
         android:layout_marginLeft="10dp"
         android:text="余额:2876"
-        android:layout_marginBottom="10dp"
         android:textColor="#8B8B8B" />
 
     <TextView
-
-
         android:id="@+id/tv_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -36,6 +36,7 @@
         android:textColor="#F76300" />
 
     <TextView
+        android:id="@+id/tv_4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
