--- a/app/src/main/res/layout/activity_detail_helen.xml
+++ b/app/src/main/res/layout/activity_detail_helen.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.huiche.lib.lib.custemview.MyRecycleView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/my_recycleview"
+    android:background="#f5f5f5"
     android:layout_width="match_parent"
     android:layout_height="match_parent" />
 
