--- a/app/src/main/res/layout/item_mypersional.xml
+++ b/app/src/main/res/layout/item_mypersional.xml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:background="@drawable/grid_fenge"
-    android:orientation="vertical"
-    android:paddingBottom="10dp"
-    android:paddingTop="10dp" >
+    android:gravity="center">
 
     <LinearLayout
-        android:id="@+id/ll_quan"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical" >
+        android:padding="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/img_pic"
@@ -20,26 +17,18 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:scaleType="matrix"
-            android:src="@drawable/sandian" />
+            android:src="@drawable/ic_launcher" />
 
         <TextView
             android:id="@+id/tv_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginTop="5dp"
             android:gravity="center"
             android:text="记录"
             android:textColor="#ABABAB" />
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/img_que"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerInParent="true"
-        android:padding="15dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/sandian"
-        android:visibility="gone" />
 
-</LinearLayout>
+</RelativeLayout>
