--- a/app/src/main/res/layout/activity_insurance.xml
+++ b/app/src/main/res/layout/activity_insurance.xml
@@ -2,21 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FBFBFB"
+    android:background="#f5f5f5"
     android:orientation="vertical">
-
 
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginTop="10dp"
-        android:background="#DADADA" />
+        android:layout_marginTop="10dp" />
 
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="#fff">
 
         <TextView
             android:id="@+id/tv_1"
@@ -25,7 +24,6 @@
             android:padding="10dp"
             android:text="保险类型"
             android:textColor="#4E4E4E"
-
             android:textSize="20sp" />
 
 
@@ -36,6 +34,7 @@
             android:layout_centerVertical="true"
             android:layout_toRightOf="@id/tv_1"
             android:padding="10dp"
+            android:clickable="true"
             android:src="@drawable/selector_insurance" />
 
         <TextView
@@ -46,13 +45,13 @@
             android:padding="10dp"
             android:text="线上购买"
             android:textColor="#4E4E4E"
-
             android:textSize="20sp" />
 
         <ImageView
             android:id="@+id/iv_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:clickable="true"
             android:layout_centerVertical="true"
             android:layout_toRightOf="@id/tv_2"
             android:padding="10dp"
@@ -66,7 +65,6 @@
             android:padding="10dp"
             android:text="线下购买"
             android:textColor="#4E4E4E"
-
             android:textSize="20sp" />
 
 
@@ -74,13 +72,13 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#DADADA" />
+        android:layout_height="1dp" />
 
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="#fff">
 
         <TextView
             android:id="@+id/tv_4"
@@ -89,7 +87,6 @@
             android:padding="10dp"
             android:text="投保金额"
             android:textColor="#4E4E4E"
-
             android:textSize="20sp" />
 
         <View
@@ -102,6 +99,7 @@
             android:background="#E92318" />
 
         <EditText
+
             android:id="@+id/edit_1"
             android:layout_width="match_parent"
             android:layout_height="35dp"
@@ -115,7 +113,8 @@
             android:focusableInTouchMode="true"
             android:hint="请输入购买的保险金额"
             android:singleLine="true"
-            android:textColor="#D2D2D2"
+            android:textColorHint="#D2D2D2"
+            android:inputType="number"
             android:textSize="20sp" />
 
 
@@ -123,21 +122,24 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#DADADA" />
+        android:layout_height="1dp" />
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="#fff">
 
         <TextView
             android:id="@+id/tv_5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:text="投保金额"
-            android:textColor="#4E4E4E"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
 
+            android:text="保单号"
+            android:textColor="#4E4E4E"
             android:textSize="20sp" />
 
         <View
@@ -150,6 +152,7 @@
             android:background="#E92318" />
 
         <EditText
+            android:inputType="number"
             android:id="@+id/edit_2"
             android:layout_width="match_parent"
             android:layout_height="35dp"
@@ -163,7 +166,7 @@
             android:focusableInTouchMode="true"
             android:hint="请输入你的保单号"
             android:singleLine="true"
-            android:textColor="#D2D2D2"
+            android:textColorHint="#D2D2D2"
             android:textSize="20sp" />
 
 
@@ -171,13 +174,14 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#DADADA" />
+        android:layout_height="1dp" />
 
 
     <RelativeLayout
+        android:id="@+id/rl_1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="#fff">
 
         <TextView
             android:id="@+id/tv_6"
@@ -191,6 +195,7 @@
 
 
         <TextView
+            android:id="@+id/tv_13"
             android:layout_width="match_parent"
             android:layout_height="35dp"
             android:layout_centerVertical="true"
@@ -204,7 +209,7 @@
             android:gravity="center_vertical"
             android:hint="请选择保险公司"
             android:singleLine="true"
-            android:textColor="#D2D2D2"
+            android:textColorHint="#D2D2D2"
             android:textSize="20sp" />
 
 
@@ -212,12 +217,12 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#DADADA" />
+        android:layout_height="1dp" />
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="#fff">
 
         <TextView
             android:id="@+id/tv_7"
@@ -253,7 +258,7 @@
             android:focusableInTouchMode="true"
             android:hint="请输入你的姓名"
             android:singleLine="true"
-            android:textColor="#D2D2D2"
+            android:textColorHint="#D2D2D2"
             android:textSize="20sp" />
 
 
@@ -261,13 +266,13 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#DADADA" />
+        android:layout_height="1dp" />
 
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="#fff">
 
         <TextView
             android:id="@+id/tv_8"
@@ -301,8 +306,9 @@
             android:focusable="true"
             android:focusableInTouchMode="true"
             android:hint="请输入你的电话号码"
+            android:inputType="number"
             android:singleLine="true"
-            android:textColor="#D2D2D2"
+            android:textColorHint="#D2D2D2"
             android:textSize="20sp" />
 
 
@@ -310,12 +316,12 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#DADADA" />
+        android:layout_height="1dp" />
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="#fff">
 
         <TextView
             android:id="@+id/tv_9"
@@ -351,13 +357,13 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#DADADA" />
+        android:layout_height="1dp" />
 
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="#fff">
 
         <TextView
             android:id="@+id/tv_10"
@@ -390,10 +396,11 @@
             android:layout_weight="0.6"
             android:background="@null"
             android:focusable="true"
+            android:inputType="number"
             android:focusableInTouchMode="true"
             android:hint="请输入推荐人的电话号码"
             android:singleLine="true"
-            android:textColor="#D2D2D2"
+            android:textColorHint="#D2D2D2"
             android:textSize="20sp" />
 
 
@@ -401,8 +408,7 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#DADADA" />
+        android:layout_height="1dp" />
 
 
     <TextView
