--- a/app/src/main/res/layout/item_discount.xml
+++ b/app/src/main/res/layout/item_discount.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="#fff"
     android:orientation="horizontal">
 
     <ImageView
@@ -17,7 +18,6 @@
         android:layout_width="90dp"
         android:layout_height="80dp"
         android:layout_marginTop="10dp"
-
         android:background="#25AEE5">
 
 
@@ -61,10 +61,9 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/bg_discount"
         android:layout_marginRight="10dp"
-        >
+        android:layout_marginTop="10dp"
+        android:background="@drawable/bg_discount">
 
 
         <ImageView
@@ -76,11 +75,11 @@
             android:src="@drawable/ic_launcher" />
 
         <ImageView
-            android:layout_marginBottom="10dp"
             android:id="@+id/iv_2"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_below="@id/iv_1"
+            android:layout_marginBottom="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:src="@drawable/ic_launcher" />
