--- a/app/src/main/res/layout/activity_my_partner_recycleview.xml
+++ b/app/src/main/res/layout/activity_my_partner_recycleview.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.huiche.lib.lib.custemview.MyRecycleView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.huiche.lib.lib.LRecyclerView.recyclerview.LRecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/myrecycle_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
